Add AWS Bedrock as LLM backend and update README documentation
   Integrates AWS Bedrock (Converse API) across the full stack: LLMManager,
   autonomous agent, config profiles, health check, and env templates.
   Updates README with Bedrock in provider lists, env var reference,
   dedicated setup section, and tech stack table.

--- a/config/config2.json
+++ b/config/config2.json
@@ -57,6 +57,21 @@
                 "pdf_support_enabled": true,
                 "guardrails_enabled": true,
                 "hallucination_mitigation_strategy": "consistency_check"
+            },
+            "bedrock_claude_default": {
+                "provider": "bedrock",
+                "model": "us.anthropic.claude-sonnet-4-20250514-v1:0",
+                "api_key": "",
+                "region": "us-east-1",
+                "temperature": 0.7,
+                "max_tokens": 4096,
+                "input_token_limit": 200000,
+                "output_token_limit": 4096,
+                "cache_enabled": true,
+                "search_context_level": "high",
+                "pdf_support_enabled": true,
+                "guardrails_enabled": true,
+                "hallucination_mitigation_strategy": "self_reflection"
             }
         }
     },
