Add LLM connection test facility to settings. Add POST /api/v1/settings/test-llm endpoint that verifies connectivity by sending a test prompt via LLMManager.generate(),with inline success/error result display in the settings UI.    Also adds boto3 to backend requirements for AWS Bedrock support

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -81,6 +81,7 @@ ENV PATH=/root/.local/bin:$PATH
 
 # Copy application code
 COPY backend/ ./backend/
+COPY core/ ./core/
 COPY prompts/ ./prompts/
 
 # Create data directories
