--- a/docker/Dockerfile.backend.lite
+++ b/docker/Dockerfile.backend.lite
@@ -18,6 +18,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY backend/ ./backend/
+COPY core/ ./core/
 COPY prompts/ ./prompts/
 
 # Create data directories
